--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Projects</a></li>
-          <li><a href="html/about.html">About</a></li>
+          <li><a href="info/about.html">About</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -60,7 +60,7 @@
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/citibike.html">
+            <a href="projects/citibike.html">
               <img src="img/intro_CitiBike.png" alt="">
               <h3 class="thumbnailTitle"> Citi Bike Accessibility </h3>
             </a>
@@ -71,7 +71,7 @@
         <!-- MCDA GIS  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/MCDA_library.html">
+            <a href="projects/MCDA_library.html">
               <img src="img/intro_MCDA_GIS.png" alt="">
               <h3 class="thumbnailTitle"> Siting Libraries </h3>
             </a>
@@ -81,7 +81,7 @@
         <!-- Logo Design for Tolu  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/theread.html">
+            <a href="projects/theread.html">
               <img src="img/intro_LogoTheRead.png" alt="">
               <h3 class="thumbnailTitle"> The Read </h3>
             </a>
@@ -91,7 +91,7 @@
         <!-- DV final : airbnb -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail">
-            <a href="html/airbnb.html">
+            <a href="projects/airbnb.html">
               <img src="img/intro_Airbnb2.png" alt="">
               <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
             </a> 
@@ -100,7 +100,7 @@
         <!-- Visualization critique datavis  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/datasketches.html">
+            <a href="projects/datasketches.html">
               <img src="img/intro_DataSketchesCritique2.png" alt="">
               <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
@@ -110,7 +110,7 @@
         <!-- DMC  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/urbansprawl.html">
+            <a href="projects/urbansprawl.html">
               <img src="img/intro_DMC3.png" alt="">
               <h3 class="thumbnailTitle"> Predicting Urban Sprawl </h3>
             </a>
@@ -120,7 +120,7 @@
         <!-- LIBRARY  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/library.html">
+            <a href="projects/library.html">
               <img src="img/intro_Library.png" alt="">
               <h3 class="thumbnailTitle"> Convergence </h3>
             </a>
@@ -130,7 +130,7 @@
         <!-- DATASCAPES  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/datascapes.html">
+            <a href="projects/datascapes.html">
               <img src="img/intro_Flatbush.png" alt="">
               <h3 class="thumbnailTitle"> Mapping the "Vibe" </h3>
             </a>
@@ -140,7 +140,7 @@
         <!-- BRIDGE  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/bridge.html">
+            <a href="projects/bridge.html">
               <img src="img/intro_Bridge.jpg" alt="">
               <h3 class="thumbnailTitle"> Blurring Boundaries </h3>
             </a>
@@ -150,7 +150,7 @@
         <!-- PAINTINGS  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
-            <a href="html/bridge.html">
+            <a href="projects/paintingseries.html">
               <img src="img/intro_paintingseries.jpg" alt="">
               <h3 class="thumbnailTitle"> Series of Three </h3>
             </a>
