--- a/projects/MCDA_library.html
+++ b/projects/MCDA_library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Data Sketches </title>
+    <title>Tola Oniyangi | Siting Libraries </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> How can one assess data visualization projects in an engaging manner? </h2>
-          <p> This <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> project </a> was both an evaluation of Data Sketches, a data visualization project, and a website design challenge. It communicated ideas through a responsive grid system and simple graphical language. </p> 
-          <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra and Andreea Seusan. </p>    
+          <h2> Can the Queens Library System decide where to locate the next library based on demographic and locational factors? </h2>
+          <p> A multi-criteria decision analysis was done to find possible locations for new libraries in the Queens Public Library system using several weighted factors. These included distance from other libraries, English proficiency, age, origin and level of education. The factors were combined with the vacant lots in Queens to generate possible lots for new library sites. From this, three possible locations which were highly suitable for a Queens Public Library were generated.</p> 
+          <p class="additionalInfo"> Spring 2017. Introduction to Geographic Information Systems. Taught by Leah Meisterlin.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -69,11 +69,19 @@
       <div class="row">
         <div class="col-md-9">
           <div class="col-md-12">
-            <div id="linkedImage">
-              <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> 
-                <img src="../img/datasketches_animation.gif"> 
-              </a> 
-            </div>
+            <img src="../img/mcda_process.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/mcda_decisionmap.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/mcda_lotsuitability1.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/mcda_lotsuitability2.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/mcda_lotsuitability3.jpg"> 
           </div>
         </div>
       </div>
