--- a/projects/airbnb.html
+++ b/projects/airbnb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | The Read </title>
+    <title>Tola Oniyangi | Airbnb Analysis </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> How can an idea be communicated effectively in a split second? </h2>
-          <p> This logo for "The Read", a book club and drive, approaches design in a minimal manner. This logo uses simplicity and clarity to communicate the business's objective. </p> 
-          <p class="additionalInfo"> Spring 2017. Freelance. </p>    
+          <h2>How do Airbnb's active users, i.e. those who write listings and leave reviews, conceive of New York City's neighborhoods? </h2>
+          <p> This <a href="https://rdottle.github.io/dv-final-project/index.html"> project </a> visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.</p> 
+          <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan. </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,8 +68,12 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-10">
-            <img src="../img/theread_finallogo.jpg"> 
+          <div class="col-md-12" >
+            <div id="linkedImage">
+              <a href="https://rdottle.github.io/dv-final-project/index.html" target="_blank">
+                <img src="../img/DV-Sp17_GroupTBD-sm.gif">
+              </a>   
+            </div>
           </div>
         </div>
       </div>
