--- a/projects/bridge.html
+++ b/projects/bridge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Urban Sprawl </title>
+    <title>Tola Oniyangi | Blurring Boundaries </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2>Can we create a model to predict the expansion of cities? </h2>
-          <p> In this machine learning project, a model that could predict urban sprawl was trained by being fed historical images of cities using Python. The model learnt to recognize built and unbuilt areas and identify them with different colors, and thus was able to predict future sprawl.</p> 
-          <p class="additionalInfo"> Fall 2016. Data Mining the City - taught by Danil Nagy. In collaboration with Marwah Garib, Vrinda Sharma and Kun Qian. </p>    
+          <h2> This reinvented bridge and gangplank stems from the question: can one smoothen the transition from land to sea? </h2>
+          <p> This proposal for New York City's East Rivver Ferry at N 5th St, Brooklyn extends the threshold between the land and the sea. It does this by mirroring the shift from stability to instability when moving from land to the sea through undulations in the roof and floor and selectively constricting wind channels through the roof.</p> 
+          <p class="additionalInfo"> Fall 2014. Architectural Design 1. Critic: Leah Meisterlin.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,19 +68,48 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-            <iframe width="853" height="480" src="https://www.youtube.com/embed/B-9XpqFs0FY" frameborder="0" allowfullscreen></iframe>
-            <img src="../img/dmc_methodologyDiagram.png"> 
+          <div class="col-md-6">
+            <img src="../img/bridge_SketchSection.jpg"> 
+          </div>
+          <div class="col-md-6">
+            <img src="../img/bridge_SketchPlan.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelWindSide.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelWind.JPG"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_ModelGround.JPG"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_SitePlan.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/bridge_Section1-1.jpg"> 
+          </div>
+          <div class="col-md-8">
+            <img src="../img/bridge_Section2-2.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/bridge_PlanSection.png"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_RenderFar.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/bridge_RenderInside.jpg"> 
           </div>
         </div>
       </div>
     </div>
-
 
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified boostrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    
+
   </body>
 </html>
