--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
