--- a/projects/paintingseries.html
+++ b/projects/paintingseries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Convergence </title>
+    <title>Tola Oniyangi | Series of Three </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,9 +54,10 @@
       <div class="row">
       <div class="col-md-3">
         <div class="sideText"> 
-          <h2> How can we create space that is both specific and adaptable, and allows students to immerse themselves in one pursuit or many as they see fit? </h2>
-          <p> This proposal for a new Barnard College library takes cues from students' repurposing of the institution's buildings. The openfloor plans and dispersed relaxation spaces, visible through openings in and outside the building, allow for flexibility. A central void joins academic programs in the building’s right to social programs in its left. </p> 
-          <p class="additionalInfo"> Spring 2015. Architectural Design 2. Critic: Brad Samuels.</p>    
+          <!-- <h1> Airbnb Analysis</h1> -->
+          <h2> Can transformations in life be captured through painting? </h2>
+          <p> This series of paintings stems from the idea that change is constant. The first represents breaking out of a rigid grid. The second portrays a shift towards dynamism and change through the painting's color and energy. The third shows a complete break from the grid and a movement towards vibrancy, fun, and ultimately, freedom. </p> 
+          <p class="additionalInfo"> Spring 2016. Painting 1. Taught by Victoria Roth.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -67,51 +68,13 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-4">
-            <img src="../img/library_FoamTrace3.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/library_FoamTrace4.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/library_FoamTrace5.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/library_SiteModel.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/library_ModelVoid.jpg"> 
-          </div>
-          <div class="col-md-12"></div>
           <div class="col-md-12">
-            <img src="../img/library_5thfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_4thfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_3rdfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_2ndfloorsection.jpg"> 
-          </div>
-          <div class="col-md-10">
-            <img src="../img/library_1stfloorsection.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/library_basementsection.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/library_miniplan.png"> 
-          </div>
-          <div class="col-md-9"></div>
-          <div class="col-md-12">
-            <img src="../img/library_section.jpg"> 
+            <img src="../img/paintingseries_wall.jpg"> 
           </div>
         </div>
       </div>
     </div>
-    
+
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
