--- a/projects/theread.html
+++ b/projects/theread.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Mapping the "Vibe" </title>
+    <title>Tola Oniyangi | The Read </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2>How can we measure a neighborhood’s “vibe” and communicate it to a certain demographic? </h2>
-          <p> This video mapping project is tailored to prospective college students through a fun graphic sensibility, lighthearted questions and a peppy musical score. It analyzes how suitable Brooklyn's Flatbush Avenue between Tillary and Fulton streets is for an ideal college neighborhood using a checklist of important qualities prospective students look for in their future neighborhoods. Data used includes field work and information from various city and national agencies.</p> 
-          <p class="additionalInfo"> Fall 2015. Datascapes and the Informal City - taught by  Leah Meisterlin. In collaboration with Joud Al Shdaifat and Kamay Jin. </p>    
+          <h2> How can an idea be communicated effectively in a split second? </h2>
+          <p> This logo for "The Read", a book club and drive, approaches design in a minimal manner. This logo uses simplicity and clarity to communicate the business's objective. </p> 
+          <p class="additionalInfo"> Spring 2017. Freelance. </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,10 +68,18 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-            <iframe width="853" height="480" src="https://www.youtube.com/embed/iFGARMjIu8o" frameborder="0" allowfullscreen></iframe>
-            <img src="../img/datascapes_staticmap.png">  
+          <div class="col-md-10">
+            <img src="../img/theread_finallogo.jpg"> 
+          </div>
         </div>
       </div>
     </div>
 
+  <!-- links to libraries -->
+    <!--jQuery via Google CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified boostrap JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
   </body>
+</html>
