--- a/info/about.html
+++ b/info/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Siting Libraries </title>
+    <title>Tola Oniyangi | About </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -41,57 +41,34 @@
         <!-- navbar collapse  -->
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../index.html">Projects</a></li>
+            <li class="active"><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
      </nav>
 
-  <!-- side bar sticky  -->
-   <div class="sidePanel">
-    <div class="container">
+    <!-- Page Content  -->
+    <div class = "container">
       <div class="row">
-      <div class="col-md-3">
-        <div class="sideText"> 
-          <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> Can the Queens Library System decide where to locate the next library based on demographic and locational factors? </h2>
-          <p> A multi-criteria decision analysis was done to find possible locations for new libraries in the Queens Public Library system using several weighted factors. These included distance from other libraries, English proficiency, age, origin and level of education. The factors were combined with the vacant lots in Queens to generate possible lots for new library sites. From this, three possible locations which were highly suitable for a Queens Public Library were generated.</p> 
-          <p class="additionalInfo"> Spring 2017. Introduction to Geographic Information Systems. Taught by Leah Meisterlin.</p>    
+        <div class = "col-md-6 col-sm-6 item">
+          <p> I am passionate about finding ways to integrate her love for (architectural) design, data visualization and analysis, and urban planning together. I have an affinity for thinking about the ways in which design impacts the way people move through cities and buildings. I believe in design as a force for addressing social issues. I am currently pursuing these interests as a dual-degree Architecture and Urban Planning masters student at Columbia University's Graduate School of Architecture Planning and Preservation.</p>
+          &nbsp
+          <p> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University.</p>
         </div>
-      </div></div>
-    </div> <!-- container  -->
-   </div><!-- sidepanel  -->
-
-  <!-- body panel-->
-   <div class="bodyPanel">
-    <div class = "container" >
-      <div class="row">
-        <div class="col-md-9">
-          <div class="col-md-12">
-            <img src="../img/mcda_process.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/mcda_decisionmap.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/mcda_lotsuitability1.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/mcda_lotsuitability2.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/mcda_lotsuitability3.jpg"> 
-          </div>
+        <div class = "col-md-6 col-sm-6 item">
+          <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> Resume </a> 
+          <a href="https://www.linkedin.com/in/tolaoniyangi/"  target="_blank"> LinkedIn</a> 
+          <a href="https://github.com/tolaoniyangi"  target="_blank"> Github</a> 
+          <a href="https://twitter.com/TolaOniyangi"  target="_blank"> Twitter </a> 
+          <p> tola.oniyangi@columbia.edu</p> 
         </div>
       </div>
     </div>
-
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified boostrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
   </body>
 </html>
