--- a/projects/datasketches.html
+++ b/projects/datasketches.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Series of Three </title>
+    <title>Tola Oniyangi | Data Sketches </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> Can transformations in life be captured through painting? </h2>
-          <p> This series of paintings stems from the idea that change is constant. The first represents breaking out of a rigid grid. The second portrays a shift towards dynamism and change through the painting's color and energy. The third shows a complete break from the grid and a movement towards vibrancy, fun, and ultimately, freedom. </p> 
-          <p class="additionalInfo"> Spring 2016. Painting 1. Taught by Victoria Roth.</p>    
+          <h2> How can one assess data visualization projects in an engaging manner? </h2>
+          <p> This <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> project </a> was both an evaluation of Data Sketches, a data visualization project, and a website design challenge. It communicated ideas through a responsive grid system and simple graphical language. </p> 
+          <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra and Andreea Seusan. </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -69,7 +69,11 @@
       <div class="row">
         <div class="col-md-9">
           <div class="col-md-12">
-            <img src="../img/paintingseries_wall.jpg"> 
+            <div id="linkedImage">
+              <a href="https://rdottle.github.io/grouptbd-assignment2/index.html"  target="_blank"> 
+                <img src="../img/datasketches_animation.gif"> 
+              </a> 
+            </div>
           </div>
         </div>
       </div>
