--- a/projects/library.html
+++ b/projects/library.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Blurring Boundaries </title>
+    <title>Tola Oniyangi | Convergence </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -42,7 +42,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="../index.html">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../info/about.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,10 +54,9 @@
       <div class="row">
       <div class="col-md-3">
         <div class="sideText"> 
-          <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> This reinvented bridge and gangplank stems from the question: can one smoothen the transition from land to sea? </h2>
-          <p> This proposal for New York City's East Rivver Ferry at N 5th St, Brooklyn extends the threshold between the land and the sea. It does this by mirroring the shift from stability to instability when moving from land to the sea through undulations in the roof and floor and selectively constricting wind channels through the roof.</p> 
-          <p class="additionalInfo"> Fall 2014. Architectural Design 1. Critic: Leah Meisterlin.</p>    
+          <h2> How can we create space that is both specific and adaptable, and allows students to immerse themselves in one pursuit or many as they see fit? </h2>
+          <p> This proposal for a new Barnard College library takes cues from students' repurposing of the institution's buildings. The openfloor plans and dispersed relaxation spaces, visible through openings in and outside the building, allow for flexibility. A central void joins academic programs in the building’s right to social programs in its left. </p> 
+          <p class="additionalInfo"> Spring 2015. Architectural Design 2. Critic: Brad Samuels.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,43 +67,51 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace3.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace4.jpg"> 
+          </div>
+          <div class="col-md-4">
+            <img src="../img/library_FoamTrace5.jpg"> 
+          </div>
           <div class="col-md-6">
-            <img src="../img/bridge_SketchSection.jpg"> 
+            <img src="../img/library_SiteModel.jpg"> 
           </div>
           <div class="col-md-6">
-            <img src="../img/bridge_SketchPlan.jpg"> 
+            <img src="../img/library_ModelVoid.jpg"> 
           </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWindSide.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWind.JPG"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelGround.JPG"> 
+          <div class="col-md-12"></div>
+          <div class="col-md-12">
+            <img src="../img/library_5thfloorsection.jpg"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_SitePlan.jpg"> 
+            <img src="../img/library_4thfloorsection.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section1-1.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/library_3rdfloorsection.jpg"> 
           </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section2-2.jpg"> 
+          <div class="col-md-12">
+            <img src="../img/library_2ndfloorsection.jpg"> 
+          </div>
+          <div class="col-md-10">
+            <img src="../img/library_1stfloorsection.jpg"> 
+          </div>
+          <div class="col-md-12">
+            <img src="../img/library_basementsection.jpg"> 
           </div>
           <div class="col-md-4">
-            <img src="../img/bridge_PlanSection.png"> 
+            <img src="../img/library_miniplan.png"> 
           </div>
+          <div class="col-md-9"></div>
           <div class="col-md-12">
-            <img src="../img/bridge_RenderFar.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/bridge_RenderInside.jpg"> 
+            <img src="../img/library_section.jpg"> 
           </div>
         </div>
       </div>
     </div>
-
+    
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
