added footer to all pages

--- a/info/about.html
+++ b/info/about.html
@@ -65,6 +65,11 @@
         </div>
       </div>
     </div>
+
+    <div class="footer">
+      <p> Built by Tola Oniyangi, 2017 </p>
+    </div>
+
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
