--- a/projects/MCDA_library.html
+++ b/projects/MCDA_library.html
@@ -83,6 +83,9 @@
           <div class="col-md-12">
             <img src="../img/mcda_lotsuitability3.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
