--- a/projects/airbnb.html
+++ b/projects/airbnb.html
@@ -75,6 +75,9 @@
               </a>   
             </div>
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
