--- a/projects/datascapes.html
+++ b/projects/datascapes.html
@@ -52,14 +52,15 @@
    <div class="sidePanel">
     <div class="container">
       <div class="row">
-      <div class="col-md-3">
+       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2>How can we measure a neighborhood’s “vibe” and communicate it to a certain demographic? </h2>
           <p> This video mapping project is tailored to prospective college students through a fun graphic sensibility, lighthearted questions and a peppy musical score. It analyzes how suitable Brooklyn's Flatbush Avenue between Tillary and Fulton streets is for an ideal college neighborhood using a checklist of important qualities prospective students look for in their future neighborhoods. Data used includes field work and information from various city and national agencies.</p> 
           <p class="additionalInfo"> Fall 2015. Datascapes and the Informal City - taught by  Leah Meisterlin. In collaboration with Joud Al Shdaifat and Kamay Jin. </p>    
         </div>
-      </div></div>
+      </div>
+     </div>
     </div> <!-- container  -->
    </div><!-- sidepanel  -->
 
@@ -70,6 +71,9 @@
         <div class="col-md-9">
             <iframe width="853" height="480" src="https://www.youtube.com/embed/iFGARMjIu8o" frameborder="0" allowfullscreen></iframe>
             <img src="../img/datascapes_staticmap.png">  
+            <div class="footer">
+              <p> Built by Tola Oniyangi, 2017 </p>
+            </div>
         </div>
       </div>
     </div>
