--- a/projects/library.html
+++ b/projects/library.html
@@ -108,6 +108,9 @@
           <div class="col-md-12">
             <img src="../img/library_section.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
