--- a/projects/theread.html
+++ b/projects/theread.html
@@ -71,6 +71,9 @@
           <div class="col-md-10">
             <img src="../img/theread_finallogo.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
