--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
   </div><!-- /.container -->
   <!-- end of masonry grid -->
   
+  <div class="footer">
+    <p> Built by Tola Oniyangi, 2017</p>
+  </div>
+
   <!-- links to libraries -->
     <!--jQuery via Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
