--- a/projects/bridge.html
+++ b/projects/bridge.html
@@ -101,6 +101,9 @@
           <div class="col-md-12">
             <img src="../img/bridge_RenderInside.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
