--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -81,6 +81,9 @@
           <div class="col-md-10">
             <img src="../img/citibike_DemographicComparison.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
