--- a/projects/paintingseries.html
+++ b/projects/paintingseries.html
@@ -71,6 +71,9 @@
           <div class="col-md-12">
             <img src="../img/paintingseries_wall.jpg"> 
           </div>
+          <div class="footer">
+            <p> Built by Tola Oniyangi, 2017 </p>
+          </div>
         </div>
       </div>
     </div>
