--- a/projects/citibike.html
+++ b/projects/citibike.html
@@ -70,7 +70,7 @@
         <div class="col-md-9">
           <div class="col-md-8">
             <div id="linkedImage">
-              <a href="../pdf/citibike_Final4.pdf" target="_blank">
+              <a href="../pdf/citibike_FinalReport.pdf" target="_blank">
                 <img src="../img/citibike_FinalCover.jpg">
               </a>   
             </div>
