--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Projects </title>
+    <title>Tola Oniyangi | Portfolio Website </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Montserrat" rel="stylesheet">
