--- a/projects/airbnb.html
+++ b/projects/airbnb.html
@@ -56,8 +56,13 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2>How do Airbnb's active users, i.e. those who write listings and leave reviews, conceive of New York City's neighborhoods? </h2>
-          <p> This <a href="https://rdottle.github.io/dv-final-project/index.html"> project </a> visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.</p> 
-          <p class="additionalInfo"> Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan. </p>    
+          <p> This <a href="https://rdottle.github.io/dv-final-project/index.html"> project </a> visualizes Airbnb text data and looks at New York City neighborhood identity through the lens of Airbnb guest reviews and host listings.
+          </p> 
+          <p class="additionalInfo"> 
+          Note: If the Airbnb Analysis website has functionality issues, allow browser to "load unsafe scripts."
+          <br>
+          Spring 2017. Data Visualization for Architecture, Urbanism and the Humanities. Taught by Juan Francisco Saldarriaga Chaux. In collaboration with Rachael Dottle, Eric Wong, Clara Dykstra, and Andreea Seusan. 
+          </p>    
         </div>
       </div></div>
     </div> <!-- container  -->
