--- a/projects/MCDA_library.html
+++ b/projects/MCDA_library.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- favicon - img for browser -->
-    <link rel="shortcut icon" type="image/png" href="img/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="../img/logo.png"/>
   </head>
 
   <body>
