added independent research

--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
           </div>
         </div><!--/.item  -->
 
+        <!-- IND RESEARCH  -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/globaltrajectories.html">
+              <img src="img/indResearch_thumbnail.jpg" alt="">
+              <h3 class="thumbnailTitle"> Global Trajectories: Local Origins </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
+        
         <!-- DATASCAPES  -->
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
