--- a/info/about.html
+++ b/info/about.html
@@ -52,9 +52,9 @@
     <div class = "container">
       <div class="row">
         <div class = "col-md-6 col-sm-6 item">
-          <p> I am passionate about finding ways to integrate design, data visualization and analysis, and planning together. To this end, I find thinking about the ways in which design impacts people's spatial experiences worthwhile. How people move through space, and how they interact with space at multiple scales gives insight into that space's effect and affect. I am pursuing these interests as a dual-degree Architecture and Urban Planning masters student at Columbia University's Graduate School of Architecture Planning and Preservation.</p>
+          <p> I am passionate about finding ways to integrate design, data visualization and analysis, and planning together. To this end, I find thinking about the ways in which design impacts people's spatial experiences. How people move through space, and how they interact with space at multiple scales can give insight into that space's effect. I am pursuing these interests as a dual-degree Architecture and Urban Planning masters student at Columbia University's Graduate School of Architecture Planning and Preservation.</p>
           &nbsp
-          <p> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University. I graduated with a Bachelor of Arts in Architecture from Barnard College in 2016 and have previously interned at architectural firms. </p>
+          <p> <span class ="highlightInfo"> Ultimately, I am interested in curating space and narratives in the physical world through digital and experiential design. </span> I am currently working at the Center for Spatial Research and the Temple Hoyne Buell Center for the study of American Architecture at Columbia University. I graduated with a Bachelor of Arts in Architecture from Barnard College in 2016 and have previously interned at architectural firms. </p>
         </div>
         <div class = "col-md-6 col-sm-6 item">
           <a href="../pdf/TolaOniyangi_Resume.pdf"  target="_blank"> Resume </a> 
