updated typo in bridge

--- a/projects/bridge.html
+++ b/projects/bridge.html
@@ -56,7 +56,7 @@
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
           <h2> This reinvented bridge and gangplank stems from the question: can one smoothen the transition from land to sea? </h2>
-          <p> This proposal for New York City's East Rivver Ferry at N 5th St, Brooklyn extends the threshold between the land and the sea. It does this by mirroring the shift from stability to instability when moving from land to the sea through undulations in the roof and floor and selectively constricting wind channels through the roof.</p> 
+          <p> This proposal for New York City's East River Ferry at N 5th St, Brooklyn extends the threshold between the land and the sea. It does this by mirroring the shift from stability to instability when moving from land to the sea through undulations in the roof and floor and selectively constricting wind channels through the roof.</p> 
           <p class="additionalInfo"> Fall 2014. Architectural Design 1. Critic: Leah Meisterlin.</p>    
         </div>
       </div></div>
