added new project, fixed border issue, updated resume

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       <div class="row masonry-container">
         <!-- change col-md-4 to change number of columns on page -->
 
+        <!-- CORNER - core 1 -->
+        <div class="col-md-4 col-sm-6 item">
+          <div class="thumbnail"> 
+            <a href="projects/corner.html">
+              <img src="img/intro_Corner.png" alt="">
+              <h3 class="thumbnailTitle"> Deconstructed Jenga </h3>
+            </a>
+          </div>
+        </div><!--/.item  -->
 
         <!-- GIS final report : citibike -->
         <div class="col-md-4 col-sm-6 item">
@@ -92,7 +101,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail">
             <a href="projects/airbnb.html">
-              <img src="img/intro_Airbnb2.png" alt="">
+              <img src="img/DV-Sp17_GroupTBD-sm.gif" alt="">
               <h3 class="thumbnailTitle"> Airbnb Analysis </h3>
             </a> 
           </div>
@@ -101,7 +110,7 @@
         <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/datasketches.html">
-              <img src="img/intro_DataSketchesCritique2.png" alt="">
+              <img src="img/datasketches_animation.gif" alt="">
               <h3 class="thumbnailTitle"> Visualization Critique </h3>
             </a>
           </div>
@@ -158,14 +167,14 @@
         </div><!--/.item  -->
 
         <!-- PAINTINGS  -->
-        <div class="col-md-4 col-sm-6 item">
+   <!--      <div class="col-md-4 col-sm-6 item">
           <div class="thumbnail"> 
             <a href="projects/paintingseries.html">
               <img src="img/intro_paintingseries.jpg" alt="">
               <h3 class="thumbnailTitle"> Series of Three </h3>
             </a>
           </div>
-        </div><!--/.item  -->
+        </div> --><!--/.item  -->
 
 
 
