--- a/projects/corner.html
+++ b/projects/corner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Tola Oniyangi | Blurring Boundaries </title>
+    <title>Tola Oniyangi | Deconstructed Jenga </title>
     
     <!-- Google fonts code -->
     <link href="https://fonts.googleapis.com/css?family=Amiko|Roboto|Montserrat" rel="stylesheet">
@@ -55,9 +55,9 @@
       <div class="col-md-3">
         <div class="sideText"> 
           <!-- <h1> Airbnb Analysis</h1> -->
-          <h2> This reinvented bridge and gangplank stems from the question: can one smoothen the transition from land to sea? </h2>
-          <p> This proposal for New York City's East Rivver Ferry at N 5th St, Brooklyn extends the threshold between the land and the sea. It does this by mirroring the shift from stability to instability when moving from land to the sea through undulations in the roof and floor and selectively constricting wind channels through the roof.</p> 
-          <p class="additionalInfo"> Fall 2014. Architectural Design 1. Critic: Leah Meisterlin.</p>    
+          <h2> How do bodies traverse space, and how does the movement of time complicate this?  </h2>
+          <p> This conglomeration of surfaces and volumes responds to both the density of people and activity level over time. At quiet times, the intervention would rotate and shift such that the platforms would form enclosed and isolated spaces suitable for introspection and repose. At social times, the platforms would intersect to form a collapsed space suitable for group configurations. Finally, at busy times, the intervention would expand to create a combination of free spaces and individual configurations.</p> 
+          <p class="additionalInfo"> Fall 2017. Core 1. Critic: Tei Carpenter.</p>    
         </div>
       </div></div>
     </div> <!-- container  -->
@@ -68,38 +68,11 @@
     <div class = "container" >
       <div class="row">
         <div class="col-md-9">
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchSection.jpg"> 
-          </div>
-          <div class="col-md-6">
-            <img src="../img/bridge_SketchPlan.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWindSide.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelWind.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_ModelGround.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/bridge_SitePlan.jpg"> 
-          </div>
           <div class="col-md-8">
-            <img src="../img/bridge_Section1-1.jpg"> 
-          </div>
-          <div class="col-md-8">
-            <img src="../img/bridge_Section2-2.jpg"> 
-          </div>
-          <div class="col-md-4">
-            <img src="../img/bridge_PlanSection.png"> 
+            <img src="../img/corner_axon.png"> 
           </div>
           <div class="col-md-12">
-            <img src="../img/bridge_RenderFar.jpg"> 
-          </div>
-          <div class="col-md-12">
-            <img src="../img/bridge_RenderInside.jpg"> 
+            <img src="../img/corner_plans+sections.png"> 
           </div>
           <div class="footer">
             <p> Built by Tola Oniyangi, 2017 </p>
